--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
                 <configuration>
                     <archive>
                         <manifest>  
-                            <mainClass>be.crydust.tokenreplacer.App</mainClass>
+                            <mainClass>be.crydust.measure.App</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
