--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     
     <groupId>be.crydust</groupId>
     <artifactId>measure</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
     <packaging>jar</packaging>
     
     <name>measure</name>
@@ -22,7 +22,7 @@
         <url>https://github.com/Crydust/measure</url>
         <connection>scm:git:git://github.com/Crydust/measure.git</connection>
         <developerConnection>scm:git:git@github.com:Crydust/measure.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>measure-1.1</tag>
   </scm>
     
     <dependencies>
