--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
         <url>https://github.com/Crydust/measure</url>
         <connection>scm:git:git://github.com/Crydust/measure.git</connection>
         <developerConnection>scm:git:git@github.com:Crydust/measure.git</developerConnection>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
     
     <dependencies>
         <dependency>
@@ -36,6 +36,12 @@
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
             <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
